--- a/public/index.html
+++ b/public/index.html
@@ -20,73 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
-
-    <script>
-      // Expose git version as release number for Sentry (e.g. release source maps).
-      window.releaseVersion = '%GIT_VERSION%';
-
-      // Init Google Tag Manager
-      dataLayer = [
-        {
-          environment: fashionTradeSettings.environment,
-        },
-      ];
-      (function(w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({
-          'gtm.start': new Date().getTime(),
-          event: 'gtm.js',
-        });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l !== 'dataLayer' ? '&l=' + l : '';
-        j.async = true;
-        j.src =
-          'https://www.googletagmanager.com/gtm.js?id=' +
-          i +
-          dl +
-          fashionTradeSettings.gtmPostUrlParams;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, 'script', 'dataLayer', fashionTradeSettings.gtmId);
-
-      // Init Intercom (but not for localhost)
-      if (location.host !== 'localhost:3000') {
-        (function() {
-          var w = window;
-          var ic = w.Intercom;
-          if (typeof ic === 'function') {
-            ic('reattach_activator');
-            ic('update', intercomSettings);
-          } else {
-            var d = document;
-            var i = function() {
-              i.c(arguments);
-            };
-            i.q = [];
-            i.c = function(args) {
-              i.q.push(args);
-            };
-            w.Intercom = i;
-            function l() {
-              var s = d.createElement('script');
-              s.type = 'text/javascript';
-              s.async = true;
-              s.src = 'https://widget.intercom.io/widget/' + fashionTradeSettings.intercomId;
-              var x = d.getElementsByTagName('script')[0];
-              x.parentNode.insertBefore(s, x);
-            }
-            if (w.attachEvent) {
-              w.attachEvent('onload', l);
-            } else {
-              w.addEventListener('load', l, false);
-            }
-          }
-        })();
-
-        Intercom('boot', { app_id: fashionTradeSettings.intercomId }); // Start new session
-      }
-    </script>
+    <title>Patchwork React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
